--- a/TODO
+++ b/TODO
@@ -1,2 +1,8 @@
 - the glade directory's contents are very old, reanimate them
 - add grab_focus shortcut to SearchCombo.gen_h
+
+------- new SearchCombo ------------
+- all flags
+- don't let go of the focus
+- multi column ctor
+- focus_in/out behaviour
