--- a/glade/ChangeLog
+++ b/glade/ChangeLog
@@ -12,3 +12,9 @@ Tue Nov 16 15:48:33 MET 1999
 * Mon Mar 29 12:11:59 MEST 1999
 
 	ChangeLog started
+
+2008/6/28 12:10:48 CEST
+	update files from .glade file
+
+2008/6/28 12:14:36 CEST
+	update files from .glade file
