--- a/glade/ChangeLog
+++ b/glade/ChangeLog
@@ -18,3 +18,6 @@ Tue Nov 16 15:48:33 MET 1999
 
 2008/6/28 12:14:36 CEST
 	update files from .glade file
+
+2011/6/30 11:53:48 CEST
+	update files from .glade file
